[metadata]
name = PyScep
version = 0.0.14
author = Bikramjeet Singh
description = A Python SCEP client and server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/bikram990/PyScep
download_url = https://github.com/bikram990/PyScep/archive/refs/tags/0.0.14.tar.gz
project_urls =
    Bug Tracker = https://github.com/bikram990/PyScep/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English

    Programming Language :: Python :: 3.8

    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators

    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: Utilities

install_requires =
    requests
    cryptography
    oscrypto
    asn1crypto
    certbuilder
    csrbuilder

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src

[bdist_wheel]
universal=1
